--- a/index.html
+++ b/index.html
@@ -19,36 +19,38 @@
         </div>
 
         <div class="main" style="display: none">
-            <div class="list no-select">
+            <div class="list no-select" id="list">
                 <div id="room_1" class="room_item">
-                    <input id="room1" type="radio" name="room_radio" class="room_radio" checked="checked">
-                    <label for="room1" class="room" id="room1">
+                    <input id="room1_radio" type="radio" name="room_radio" class="room_radio" checked="checked" value="1">
+                    <label for="room1_radio" class="room" id="room1">
                         <img src="/img/neo.png" height="80px">
                         <span id="name">Room Name</span>
                     </label>
                 </div>
                 <div id="room_2" class="room_item">
-                    <input id="room2" type="radio" name="room_radio" class="room_radio">
-                    <label for="room2" class="room">
+                    <input id="room2_radio" type="radio" name="room_radio" class="room_radio" value="2">
+                    <label for="room2_radio" class="room">
                         <img src="/img/neo.png" height="80px">
                         <span id="name">Another Room</span>
                     </label>
                 </div>
             </div>
-
             <div class="view">
                 <div class="messages">
-
+                    <div class="room_messages" id="messages_1">
+                        <span>Room 1</span>
+                    </div>
+                    <div class="room_messages" id="messages_2">
+                        <span>Room 2</span>
+                    </div>
                 </div>
                 <div class="input">
-                    <!--<input type="text" placeholder="Write a message...">-->
                     <textarea id="text" rows="1" placeholder="Write a message..." spellcheck="false"></textarea>
                     <button type="submit">Send</button>
                 </div>
             </div>
         </div>
 
-        <script src="/js/jquery.js"></script>
         <script src="/js/main.js"></script>
     </body>
-<html>
+</html>
