colored nicks, async user info loading

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             </div>
             <div class="view">
-                <div class="messages _split" id="message_window"> <!-- remove the _ to split -->
+                <div class="messages split" id="message_window">
 
                 </div>
 
