--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <input id="pass" type="password" placeholder="password"><br>
                     <button type="submit">Log in</button>
                 </form>
+                <span id="error" class="red"></span>
             </center>
         </div>
 
