room timestamps, live sorting instead of bump

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 <label class="room">
                     <img height="70px" width="70px">
                     <span id="name"></span>
+                    <span class="timestamp"></span>
+                    <span class="ts" style="display: none"></span>
                 </label>
             </div>
 
