room backlog, scroll to bottom, roomlist info

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             </div>
             <div class="view">
                 <div class="messages split" id="message_window">
-
                 </div>
 
                 <div class="input">
@@ -51,8 +50,9 @@
                 <input type="radio" class="room_radio">
                 <label class="room">
                     <img height="70px" width="70px">
-                    <span id="name"></span>
+                    <span id="name"></span><br>
                     <span class="timestamp"></span>
+                    <span class="last_msg"></span>
                     <span class="ts" style="display: none"></span>
                 </label>
             </div>
