major code refactoring

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
            -->
 
         </div>
-        <script src="/js/main.js"></script>
+        <!--<script src="/js/main.js"></script>-->
+        <script src="js/functions.js"></script>
+        <script src="js/light.js"></script>
     </body>
 </html>
